Website boot proper

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version Maintenance Mode \./ -->
+	<!-- Site version 1.0 \./ -->
 
 <head>
-<title>Harmonious Platform Systems</title>
+<title>Harmonious Platform Systems - Home</title>
 
 <style>
   body
@@ -22,19 +22,76 @@
 
 <div class="main">
     <font color="gold">
-
-<br>	
-	<p><strong>Site Status</strong></p>
 <br>
 
-<font color="gold"><div align="left" style="font-size:50%">Website down.</div></font>
+	<hr style="border: 1px solid gold;" />
+		<!-- nav menu \./ -->
+	<font color="gold"><div align="center" style="font-size:50%"><strong>
+	Our network: 
+	<a href="http://www.harmoniousplatformsystems.website">HARMONIOUS PLATFORM SYSTEMS</a> | 
+	<a href="http://www.gcmediapublishingmanagement.website">GC MEDIA PUBLISHING MANAGEMENT</a>
+	</strong></div></font>
+	<hr style="border: 1px solid gold;" />
+<!-- / -->
+
+		<!-- site menu \./ -->
+	<font color="gold"><div align="center" style="font-size:50%"><strong>
+	<a href="http://www.harmoniousplatformsystems.website">HOME</a> | 
+	<a href="components.html">COMPONENTS</a> | 
+	<a href="progress.html">PROGRESS</a> | 
+	<a href="status.html">STATUS</a> | 
+	<a href="about.html">ABOUT</a> | 
+	<a href="contact.html">CONTACT</a>
+	</strong></div></font>
+	<hr style="border: 1px solid gold;" /><br>
+
+			<!-- logo image is to be used as part of the title text \./ -->
+	<img src="https://i.imgur.com/PkMpBXR.png" alt="logo-image" width="80" height="80"><strong>armonious Platform Systems</strong>
+
+	<font color="gold"><div style="font-size:60%"><marquee><b><i>Our Startup, is Your Startup!</i></b></marquee></div></font><br>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Specification 1.0*</b></div></font><br>
+
+	<font color="gold"><div align="left" style="font-size:50%"><b>Linux, BSD, Windows OS Uniform Connectivity</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Seamless Physical and Virtual Integration</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Secure Sandbox Intranet</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Domain Implementation</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Global Virtual Office</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Session Authentication</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Harmonious Access Browser</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Project Management</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Git/Issue Tracker/Bug Tracker/Q & A</b></div></font>	
+	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Mail and Message Board</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>HRM/CRM</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Digital currency transaction support</b></div></font><br>
+<!-- br -->
+	<font color="gold"><div align="left" style="font-size:40%"><i>*Harmonious Platform is prototype and under active development
+	</i></div></font><br>
+<!-- br -->
+	<font color="gold"><div align="left" style="font-size:50%">For detailed list of components, <a href="components.html">click 
+	here</a>.</div></font><br>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Harmonious Platform Systems is a Gold Coast-based startup.</b> &#127796
+	</div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">"Harmonious Platform" is a hybrid digital office specification designed 
+	specifically for software development and publishing startups.</div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">We use Harmonious Platform in-house, providing us with an 
+	immediate advantage to resolve issues efficiently and with minimal downtime.</div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">We embrace the "<i>move fast, break things</i>" ethos. That does not come 
+	at the expense of sacrificing data integrity or network security.</div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">Throughout its development, Harmonious Platform has proven stable and 
+	robust against system failure. Uptime remains at 100%.</div></font><br>
+
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<strong>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
-	</strong></font>
+    </strong></font>
 </div> 
 
 </body>
