--- a/status.html
+++ b/status.html
@@ -28,15 +28,15 @@
 		<!-- nav menu \./ -->
 	<font color="gold"><div align="center" style="font-size:50%"><strong>
 	Our network: 
-	<a href="http://www.harmoniousplatformsystems.website">HARMONIOUS PLATFORM SYSTEMS</a> | 
-	<a href="http://www.gcmediapublishingmanagement.website">GC MEDIA PUBLISHING MANAGEMENT</a>
+	<a href="http://link.net:8000/1.1.102.310.4.0.1.2.0.1/name-resolver/harmonious-platform-systems.html">HARMONIOUS PLATFORM SYSTEMS</a> | 
+	<a href="http://link.net:8000/1.1.102.310.4.0.1.2.0.1/name-resolver/gcmpm.html">GC MEDIA PUBLISHING MANAGEMENT</a>
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" />
 <!-- / -->
 
 		<!-- site menu \./ -->
 	<font color="gold"><div align="center" style="font-size:50%"><strong>
-	<a href="http://www.harmoniousplatformsystems.website">HOME</a> | 
+	<a href="http://link.net:8000/1.1.102.310.4.0.1.2.0.1/name-resolver/harmonious-platform-systems.html">HOME</a> | 
 	<a href="components.html">COMPONENTS</a> | 
 	<a href="progress.html">PROGRESS</a> | 
 	<a href="status.html">STATUS</a> | 
@@ -81,7 +81,7 @@
 			<td>1</td>
 			<td>Brisbane, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#2:1:0021:52</td>
 		</tr>
 		<tr>
@@ -97,7 +97,7 @@
 			<td>1</td>
 			<td>Hong Kong, Hong Kong</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#4:1:0041:54</td>
 		</tr>
 		<tr>
@@ -105,7 +105,7 @@
 			<td>1</td>
 			<td>Labrador, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#5:1:0051:55</td>
 		</tr>
 		<tr>
@@ -113,7 +113,7 @@
 			<td>1</td>
 			<td>Maroochydore, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#6:1:0061:56</td>
 		</tr>
 		<tr>
@@ -121,7 +121,7 @@
 			<td>1</td>
 			<td>Melbourne, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#7:1:0071:57</td>
 		</tr>
 		<tr>
@@ -161,7 +161,7 @@
 			<td>1</td>
 			<td>Salt Lake City, United States of America</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:3931:63</td>
 		</tr>
 		<tr>
@@ -177,7 +177,7 @@
 			<td>1</td>
 			<td>Stockholm, Sweden</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:5951:65</td>
 		</tr>
 		<tr>
@@ -185,7 +185,7 @@
 			<td>1</td>
 			<td>Sydney, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:6961:66</td>
 		</tr>
 		<tr>
@@ -199,9 +199,17 @@
 		<tr>
 			<td>&#128994;</td>
 			<td>1</td>
+			<td>Washington D.C., United States of America</td>
+			<td>Active</td>
+			<td>Exhausted</td>
+			<td>Pitrix.viADDR#9:1:9991:69</td>
+		</tr>
+		<tr>
+			<td>&#128994;</td>
+			<td>1</td>
 			<td>Zurich, Switzerland</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:8981:68</td>
 		</tr>
 	</table>
