Status page fix

--- a/status.html
+++ b/status.html
@@ -81,7 +81,7 @@
 			<td>1</td>
 			<td>Brisbane, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#2:1:0021:52</td>
 		</tr>
 		<tr>
@@ -97,7 +97,7 @@
 			<td>1</td>
 			<td>Hong Kong, Hong Kong</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#4:1:0041:54</td>
 		</tr>
 		<tr>
@@ -105,7 +105,7 @@
 			<td>1</td>
 			<td>Labrador, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#5:1:0051:55</td>
 		</tr>
 		<tr>
@@ -113,7 +113,7 @@
 			<td>1</td>
 			<td>Maroochydore, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#6:1:0061:56</td>
 		</tr>
 		<tr>
@@ -121,7 +121,7 @@
 			<td>1</td>
 			<td>Melbourne, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#7:1:0071:57</td>
 		</tr>
 		<tr>
@@ -161,7 +161,7 @@
 			<td>1</td>
 			<td>Salt Lake City, United States of America</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:3931:63</td>
 		</tr>
 		<tr>
@@ -177,7 +177,7 @@
 			<td>1</td>
 			<td>Stockholm, Sweden</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:5951:65</td>
 		</tr>
 		<tr>
@@ -185,7 +185,7 @@
 			<td>1</td>
 			<td>Sydney, Australia</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:6961:66</td>
 		</tr>
 		<tr>
@@ -209,7 +209,7 @@
 			<td>1</td>
 			<td>Zurich, Switzerland</td>
 			<td>Active</td>
-			<td>Available</td>
+			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:8981:68</td>
 		</tr>
 	</table>
