Source code update to latest version-part1

--- a/progress.html
+++ b/progress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 1.0 \./ -->
+	<!-- Site version 2.2.1 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Progress</title>
@@ -120,11 +120,12 @@
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<strong>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
-	</strong></font>
+<!-- br -->
+	<div align="left" style="font-size:35%"><b>Site version 2.2.1</b></div><br>
+    </font>
 </div> 
 
 </body>
