--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 1.0 \./ -->
+	<!-- Site version 2.2.1 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - About</title>
@@ -102,14 +102,16 @@
 	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>Founder and Director - Chris McGimpsey-Jones
 	</i></div></font>
 	</figcaption></figure><br>
+		</center>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<strong>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
-	</strong></font>
+<!-- br -->
+	<div align="left" style="font-size:35%"><b>Site version 2.2.1</b></div><br>
+    </font>
 </div> 
 
 </body>
