Source code update to latest version-part2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 1.0 \./ -->
+	<!-- Site version 2.2.1 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Home</title>
@@ -50,6 +50,12 @@
 
 	<font color="gold"><div style="font-size:60%"><marquee><b><i>Our Startup, is Your Startup!</i></b></marquee></div></font><br>
 <br>
+	<font color="gold"><div style="font-size:50%"><i>Free From <b>Mass-surveillance</b> ... </i></div></font>
+	<font color="gold"><div style="font-size:50%"><i>Free From <b>Government Censorship</b> ... </i></div></font>
+	<font color="gold"><div style="font-size:50%"><i>Free From <b>Big Tech Control</b> ... </i></div></font><br>
+	<font color="gold"><div style="font-size:60%"><i>An <b>UNCENSORED</b> Platform, <b>YOU</b> Control!</i></div></font>
+	<!--/--><br>
+<br>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Specification 1.0*</b></div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%"><b>Linux, BSD, Windows OS Uniform Connectivity</b></div></font>
@@ -84,14 +90,26 @@
 	at the expense of sacrificing data integrity or network security.</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Throughout its development, Harmonious Platform has proven stable and 
-	robust against system failure. Uptime remains at 100%.</div></font><br>
+	robust against system failure.</div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">Since January 2021, uptime remains @ <b>100%</b>.</div></font>
+<!-- br -->
+	<font color="gold"><div align="left" style="font-size:50%"><ul>
+		<li><b>2020 average @ 40%</b></li>		
+		<li><b>Jan-Mar 2021 quarter 1 @ 100%</b></li>
+		<li><b>Apr-Jun 2021 quarter 2 @ 100%</b></li>
+		<li><b>Jul-Sep 2021 quarter 3 </b></li>
+		<li><b>Oct-Dec 2021 quarter 4 </b></li>
+	</ul></div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
-    </strong></font>
+<!-- br -->
+	<div align="left" style="font-size:35%"><b>Site version 2.2.1</b></div><br>
+    </font>
 </div> 
 
 </body>
