--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.2.1 \./ -->
+	<!-- Site version 2.3.0 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Home</title>
@@ -22,8 +22,12 @@
 
 <div class="main">
     <font color="gold">
-<br>
-
+		<!-- starter menu \./ -->
+		<font color="black"><div align="left" style="font-size:50%">
+			<span style="background-color: gold">
+				<strong> >>>>> Delivering hybrid networks, since 2013.</strong>
+			</span></div></font>
+<!-- / -->
 	<hr style="border: 1px solid gold;" />
 		<!-- nav menu \./ -->
 	<font color="gold"><div align="center" style="font-size:50%"><strong>
@@ -40,6 +44,9 @@
 	<a href="components.html">COMPONENTS</a> | 
 	<a href="progress.html">PROGRESS</a> | 
 	<a href="status.html">STATUS</a> | 
+	<a href="certification.html">CERTIFICATION</a> | 
+	<a href="hardware.html">HARDWARE</a> | 
+	<a href="pricing.html">PRICING</a> | 
 	<a href="about.html">ABOUT</a> | 
 	<a href="contact.html">CONTACT</a>
 	</strong></div></font>
@@ -108,7 +115,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.2.1</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.3.0</b></div><br>
     </font>
 </div> 
 
