--- a/status.html
+++ b/status.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.2.1 \./ -->
+	<!-- Site version 2.3.0 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Status</title>
@@ -22,8 +22,12 @@
 
 <div class="main">
     <font color="gold">
-<br>
-
+		<!-- starter menu \./ -->
+		<font color="black"><div align="left" style="font-size:50%">
+			<span style="background-color: gold">
+				<strong> >>>>> Delivering hybrid networks, since 2013.</strong>
+			</span></div></font>
+<!-- / -->
 	<hr style="border: 1px solid gold;" />
 		<!-- nav menu \./ -->
 	<font color="gold"><div align="center" style="font-size:50%"><strong>
@@ -40,6 +44,9 @@
 	<a href="components.html">COMPONENTS</a> | 
 	<a href="progress.html">PROGRESS</a> | 
 	<a href="status.html">STATUS</a> | 
+	<a href="certification.html">CERTIFICATION</a> | 
+	<a href="hardware.html">HARDWARE</a> | 
+	<a href="pricing.html">PRICING</a> | 
 	<a href="about.html">ABOUT</a> | 
 	<a href="contact.html">CONTACT</a>
 	</strong></div></font>
@@ -69,10 +76,10 @@
 			<th>viADDR</th>
 		</tr>
 		<tr>
-			<td>&#128994;</th>
-			<td>2</th>
-			<td>Amsterdam, Netherlands</th>
-			<td>Active</th>
+			<td>&#128994;</td>
+			<td>2</td>
+			<td>Amsterdam, Netherlands</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#1:2:0012:51</td>
 		</tr>
@@ -80,23 +87,23 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Brisbane, Australia</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#2:1:0021:52</td>
 		</tr>
 		<tr>
-			<td>&#128994;</td>
+			<td>&#128308;</td>
 			<td>3</td>
 			<td>Cape Town, South Africa</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#3:3:0033:53</td>
 		</tr>
 		<tr>
-			<td>&#128994;</td>
+			<td>&#128308;</td>
 			<td>1</td>
 			<td>Hong Kong, Hong Kong</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#4:1:0041:54</td>
 		</tr>
@@ -104,7 +111,7 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Labrador, Australia</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#5:1:0051:55</td>
 		</tr>
@@ -112,7 +119,7 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Maroochydore, Australia</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#6:1:0061:56</td>
 		</tr>
@@ -120,7 +127,7 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Melbourne, Australia</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#7:1:0071:57</td>
 		</tr>
@@ -128,7 +135,7 @@
 			<td>&#128994;</td>
 			<td>2</td>
 			<td>Moscow, Russia</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#8:2:0082:58</td>
 		</tr>
@@ -136,7 +143,7 @@
 			<td>&#128994;</td>
 			<td>2</td>
 			<td>Mumbai, India</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:2:0092:59</td>
 		</tr>
@@ -144,15 +151,15 @@
 			<td>&#128994;</td>
 			<td>3</td>
 			<td>Panama City, Panama</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:3:1913:61</td>
 		</tr>
 		<tr>
-			<td>&#128994;</td>
+			<td>&#128308;</td>
 			<td>2</td>
 			<td>Reykjavik, Iceland</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:2:2922:62</td>
 		</tr>
@@ -160,15 +167,15 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Salt Lake City, United States of America</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:3931:63</td>
 		</tr>
 		<tr>
-			<td>&#128994;</td>
+			<td>&#128308;</td>
 			<td>3</td>
 			<td>Santiago, Chile</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:3:4943:64</td>
 		</tr>
@@ -176,7 +183,7 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Stockholm, Sweden</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:5951:65</td>
 		</tr>
@@ -184,7 +191,7 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Sydney, Australia</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:6961:66</td>
 		</tr>
@@ -192,7 +199,7 @@
 			<td>&#128994;</td>
 			<td>2</td>
 			<td>Warwick, Australia</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:2:7972:67</td>
 		</tr>
@@ -200,7 +207,7 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Washington D.C., United States of America</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:9991:69</td>
 		</tr>
@@ -208,14 +215,13 @@
 			<td>&#128994;</td>
 			<td>1</td>
 			<td>Zurich, Switzerland</td>
-			<td>Active</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:8981:68</td>
 		</tr>
 	</table>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Table data not measured in real-time.</div></font>
-	<font color="gold"><div align="left" style="font-size:50%">Updated as conditions change.</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%">Data not real-time.</div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
@@ -223,7 +229,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.2.1</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.3.0</b></div><br>
     </font>
 </div> 
 
