--- a/certification.html
+++ b/certification.html
@@ -4,7 +4,7 @@
 	<!-- Site version 2.3.0 \./ -->
 
 <head>
-<title>Harmonious Platform Systems - Contact</title>
+<title>Harmonious Platform Systems - Certification</title>
 
 <style>
   body
@@ -52,24 +52,9 @@
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" /><br>
 
-	<p><strong>Contact</strong></p>
+	<p><strong>Certification</strong></p>
 <br>
-	<font color="gold"><div style="font-size:50%"><b>Founder and Director</b></div></font>
-	<font color="gold"><div style="font-size:50%">Chris McGimpsey-Jones</div></font>
-<br>
-	<font color="gold"><div style="font-size:50%"><b>Email</b></div></font>
-	<font color="gold"><div style="font-size:50%">harmoniousplatformsystems@outlook.com.au</div></font>
-<br>
-	<font color="gold"><div style="font-size:50%"><b>Cell phone</b></div></font>
-	<font color="gold"><div style="font-size:50%">0402 650 018</div></font>
-<br>
-	<font color="gold"><div style="font-size:50%"><b>Business registration</b></div></font>
-	<font color="gold"><div style="font-size:50%">PO Box 171</div></font>
-	<font color="gold"><div style="font-size:50%">Labrador, Gold Coast</div></font>
-	<font color="gold"><div style="font-size:50%">Queensland (Australia)</div></font>
-<br>
-	<figure><img src="https://i.imgur.com/ND8yNE3.png" alt="business-location-register" width="600">
-	</figure><br>
+	<font color="gold"><div align="left" style="font-size:50%">Coming soon.</div></font>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
