Website updated to v2.4.0

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.3.0 \./ -->
+	<!-- Site version 2.4.0 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Contact</title>
@@ -66,10 +66,7 @@
 	<font color="gold"><div style="font-size:50%"><b>Business registration</b></div></font>
 	<font color="gold"><div style="font-size:50%">PO Box 171</div></font>
 	<font color="gold"><div style="font-size:50%">Labrador, Gold Coast</div></font>
-	<font color="gold"><div style="font-size:50%">Queensland (Australia)</div></font>
-<br>
-	<figure><img src="https://i.imgur.com/ND8yNE3.png" alt="business-location-register" width="600">
-	</figure><br>
+	<font color="gold"><div style="font-size:50%">Queensland (Australia)</div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
@@ -77,7 +74,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.3.0</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.0</b></div><br>
     </font>
 </div> 
 
