--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.3.0 \./ -->
+	<!-- Site version 2.4.0 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - About</title>
@@ -59,9 +59,9 @@
 	does not get lost and is reflected in Harmonious Platform.</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform has heritage that dates back to 2013. From 2019, 
-	development accelerated. The global health pandemic that reshaped many industries around the world shone a light on the many 
-	possibilities of what can be achieved by working from home. Mainstream products are available but offer confusing levels of 
-	interoperability.</div></font>
+	development accelerated. The global pandemic has reshaped many industries and shone a light on the many possibilities of what can be 
+	achieved by working from home. Mainstream products offer confusing levels of interoperability and are often subjected to mass-surveillance, 
+	government censorship and big tech control. We do not like that. We believe YOU should be in control of YOUR network!</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">During 2020, we adopted a new focus to create a hybrid digital office platform 
 	using existing free and open-source components, combining them with our in-house developed tools, to establish a hybrid digital office 
@@ -69,47 +69,12 @@
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform can be scaled using our unique implementation of 
 	modular components. Some components require dedicated server resources, while others can be integrated using shared resources. 
-	We combine physical and virtual servers running on-premises, using Inter-Com Net to establish platform unity - "Harmonious 
+	We combine hardware and virtual servers running on-premises, using Inter-Com Net to establish platform unity - "Harmonious 
 	Platform".</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform is developed using modular components which 
 	enables maximum level of scalability, effectively on-the-fly, without affecting overall performance of the platform or inducing 
-	avoidable downtime. Modular components can be added or removed as scaling is adapted. Interoperability is our core focus.</div></font>
-<br>
-		<center>
-	<figure><img src="https://i.imgur.com/Yhy7Cyi.png" alt="linknet-front-end" 
-	width="600">
-	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>LinkNet (front-end)</i></div></font></figcaption></figure>
-<br>
-	<figure><img src="https://i.imgur.com/eJj3dBh.png" alt="mainframe" width="600">
-	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>Mainframe home sample</i></div></font>
-	</figcaption></figure>
-<br>
-	<figure><img src="https://i.imgur.com/5V7CWA9.png" alt="inter-com-net" width="600">
-	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>Inter-Com Net</i></div></font></figcaption></figure>
-<br>
-	<figure><img src="https://i.imgur.com/dJNdXNC.png" alt="system-admin-1" width="600">
-	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>System Admininstration sample #1</i></div></font>
-	</figcaption></figure>
-<br>
-	<figure><img src="https://i.imgur.com/ibvHpUT.png" alt="system-admin-2" width="600">
-	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>System Administration sample #2</i></div></font>
-	</figcaption></figure>
-<br>
-	<figure><img src="https://i.imgur.com/m9yh9e7.png" alt="system-admin-3" width="600">
-	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>System Administration sample #3</i></div></font>
-	</figcaption></figure>
-<br>
-	<figure><img src="https://i.imgur.com/iyVLwCN.png" alt="command-center" width="600">
-	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>Command Center (First running deployment)</i></div></font>
-	</figcaption></figure>
-<br>
-	<figure><img src="https://i.imgur.com/djJGm56.png" alt="founder-director-bio" 
-	width="600">
-	<figcaption><font color="gold"><div align="center" style="font-size:50%"><i>Founder and Director - Chris McGimpsey-Jones
-	</i></div></font>
-	</figcaption></figure><br>
-		</center>
+	avoidable downtime. Modular components can be added or removed as scaling is adapted. Interoperability is our core focus.</div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
@@ -117,7 +82,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.3.0</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.0</b></div><br>
     </font>
 </div> 
 
