--- a/components.html
+++ b/components.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.3.0 \./ -->
+	<!-- Site version 2.4.0 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Components</title>
@@ -60,7 +60,7 @@
 	code for these in-house developed components, we are completely open and transparent about how all components function and what 
 	purpose they serve to Harmonious Platform.</div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">We are dedicated supporters of FOSS, Linux and BSD.</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%">We are dedicated supporters of FOSS, Linux and BSD!</div></font><br>
 <br>
 	<hr style="border: 1px solid gold;" />
 
@@ -97,7 +97,7 @@
 
 	<font color="gold"><div align="left" style="font-size:50%"><b>Watchtower</b></div></font>
 
-	<font color="gold"><div align="left" style="font-size:50%">Low-level security gateway for LinkNet Front-end.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">Low-level security gateway for LinkNet.</div></font>
 
 <hr style="border: 1px solid gold;" />
 
@@ -128,26 +128,6 @@
 
 <hr style="border: 1px solid gold;" />
 
-	<font color="gold"><div align="left" style="font-size:50%"><b>M2M web syntax</b></div></font>
-
-	<font color="gold"><div align="left" style="font-size:50%">Proprietary internal web syntax compiler and interpreter used 
-	for web publishing.</div></font>
-
-<hr style="border: 1px solid gold;" />
-
-	<font color="gold"><div align="left" style="font-size:50%"><b>Wingspan</b></div></font>
-
-	<font color="gold"><div align="left" style="font-size:50%">Verified search and publishing platform that runs parallel to 
-	LinkNet.</div></font>
-
-<hr style="border: 1px solid gold;" />
-
-	<font color="gold"><div align="left" style="font-size:50%"><b>Churn Resolver</b></div></font>
-
-	<font color="gold"><div align="left" style="font-size:50%">An alternative, proprietary domain name allocation system.</div></font>
-
-<hr style="border: 1px solid gold;" />
-
 	<font color="gold"><div align="left" style="font-size:50%"><b>Pitrix</b></div></font>
 
 	<font color="gold"><div align="left" style="font-size:50%">Component which provides global virtual office functions and session 
@@ -162,43 +142,9 @@
 
 <hr style="border: 1px solid gold;" />
 
-	<font color="gold"><div align="left" style="font-size:50%"><b>Project Management/Redmine</b></div></font>
-
-	<font color="gold"><div align="left" style="font-size:50%">Component which provides complete project management function.</div></font>
-
-<hr style="border: 1px solid gold;" />
-
-	<font color="gold"><div align="left" style="font-size:50%"><b>Git/Issue Tracker/Bug Tracker/Q & A</b></div></font>
-
-	<font color="gold"><div align="left" style="font-size:50%">Main suite of components which provide Git source code management, 
-	issue and support tracking, bug tracking and Question & Answer platform.</div></font>
-
-<hr style="border: 1px solid gold;" />
-
-	<font color="gold"><div align="left" style="font-size:50%"><b>Email System</b></div></font>
-
-	<font color="gold"><div align="left" style="font-size:50%">Internal mail system configured with local email server and client.
-	</div></font>
-
-<hr style="border: 1px solid gold;" />
-
-	<font color="gold"><div align="left" style="font-size:50%"><b>Dark Unified Messaging Portal (DUMP)</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Message Board</b></div></font>
 
 	<font color="gold"><div align="left" style="font-size:50%">Unified internal message board platform.</div></font>
-
-<hr style="border: 1px solid gold;" />
-
-	<font color="gold"><div align="left" style="font-size:50%"><b>HRM/CRM</b></div></font>
-
-	<font color="gold"><div align="left" style="font-size:50%">Configuration of two components which provide human resource management 
-	and customer relationship management.</div></font>
-
-<hr style="border: 1px solid gold;" />
-
-	<font color="gold"><div align="left" style="font-size:50%"><b>Centrally Managed Digital Currency (CMDC)</b></div></font>
-
-	<font color="gold"><div align="left" style="font-size:50%">Proprietary digital currency with full technical compliance with 
-	Harmonious Platform.</div></font>
 
 <hr style="border: 1px solid gold;" /><br>
 
@@ -208,7 +154,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.3.0</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.0</b></div><br>
     </font>
 </div> 
 
