Website updated to v2.4.0

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.3.0 \./ -->
+	<!-- Site version 2.4.0 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Home</title>
@@ -63,20 +63,16 @@
 	<font color="gold"><div style="font-size:60%"><i>An <b>UNCENSORED</b> Platform, <b>YOU</b> Control!</i></div></font>
 	<!--/--><br>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%"><b>Specification 1.0*</b></div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Specification 2.0*</b></div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:50%"><b>Linux, BSD, Windows OS Uniform Connectivity</b></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><b>Seamless Physical and Virtual Integration</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Linux-based Uniform Connectivity</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Seamless Hardware and Virtual Integration</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Secure Sandbox Intranet</b></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Domain Implementation</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Domain Structuring</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Global Virtual Office</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Session Authentication</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Harmonious Access Browser</b></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><b>Project Management</b></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><b>Git/Issue Tracker/Bug Tracker/Q & A</b></div></font>	
-	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Mail and Message Board</b></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><b>HRM/CRM</b></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><b>Digital currency transaction support</b></div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Message Board</b></div></font><br>
 <!-- br -->
 	<font color="gold"><div align="left" style="font-size:40%"><i>*Harmonious Platform is prototype and under active development
 	</i></div></font><br>
@@ -90,24 +86,11 @@
 	<font color="gold"><div align="left" style="font-size:50%">"Harmonious Platform" is a hybrid digital office specification designed 
 	specifically for software development and publishing startups.</div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">We use Harmonious Platform in-house, providing us with an 
-	immediate advantage to resolve issues efficiently and with minimal downtime.</div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%">We embrace the "<i>move fast, break things</i>" ethos. That does not come 
+	<font color="gold"><div align="left" style="font-size:50%">We embrace the "move fast, break things" ethos. That does not come 
 	at the expense of sacrificing data integrity or network security.</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Throughout its development, Harmonious Platform has proven stable and 
-	robust against system failure.</div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%">Since January 2021, uptime remains @ <b>100%</b>.</div></font>
-<!-- br -->
-	<font color="gold"><div align="left" style="font-size:50%"><ul>
-		<li><b>2020 average @ 40%</b></li>		
-		<li><b>Jan-Mar 2021 quarter 1 @ 100%</b></li>
-		<li><b>Apr-Jun 2021 quarter 2 @ 100%</b></li>
-		<li><b>Jul-Sep 2021 quarter 3 </b></li>
-		<li><b>Oct-Dec 2021 quarter 4 </b></li>
-	</ul></div></font><br>
+	robust against system failure.</div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
@@ -115,7 +98,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.3.0</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.0</b></div><br>
     </font>
 </div> 
 
