--- a/progress.html
+++ b/progress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.3.0 \./ -->
+	<!-- Site version 2.4.0 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Progress</title>
@@ -86,44 +86,14 @@
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>LinkNet Status Monitor Tool</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="30" max="100"> 30% </progress></div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>M2M web syntax</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="10" max="100"> 10% </progress></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Wingspan</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="25" max="100"> 25% </progress></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Churn Resolver</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="45" max="100"> 45% </progress></div></font>
-<br>
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Pitrix</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="65" max="100"> 65% </progress></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Harmonious Access Browser</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="50" max="100"> 50% </progress></div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Project Manager</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Git/Issue Tracker/Bug Tracker/Q & A
-	</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="50" max="100"> 50% </progress></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Email System</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Dark Unified Messaging Portal (DUMP)
-	</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>HRM</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>CRM</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="90" max="100"> 90% </progress></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Centrally Managed Digital Currency (CMDC)
-	</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="5" max="100"> 5% </progress></div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Internal Message Board</b></label></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
@@ -131,7 +101,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.3.0</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.0</b></div><br>
     </font>
 </div> 
 
