Website updated to v2.4.1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.4.0 \./ -->
+	<!-- Site version 2.4.1 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Home</title>
@@ -91,14 +91,23 @@
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Throughout its development, Harmonious Platform has proven stable and 
 	robust against system failure.</div></font><br>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><b><u>News</u></b></div></font>
 
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>September 10, 2021</b><br>
+	<br>
+	After a long period of heavy development on Pitrix, real progress has finally been made. We are currently in the final stages of
+	testing and debugging in preparation for shipping later in the month. Assuming no serious issues are determined, Pitrix should ship as
+	scheduled on September 30. Until this time, all Pitrix global allocations will remain inactive.</em>
+	</p><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.4.0</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.1</b></div><br>
     </font>
 </div> 
 
